Zoom controllers added
