# src/controllers/zoom_controllers/index.ts
@@ -1,0 +1,15 @@
+export {
+  generateZoomSignature,
+  createZoomMeeting,
+  addRegistrantsToZoomMeeting,
+  zoomAuth,
+  getZoomMeetings,
+  getZoomMeeting,
+  deleteZoomMeeting,
+  zoomEvents,
+  endZoomMeeting,
+  getPastZoomMeeting,
+  getEndedZoomMeeting,
+  createZoomUser,
+  getZoomUsers,
+} from "./zoomControllers";
